Prevent status bar wrapping

--- a/app/assets/stylesheets/katalyst/content/editor/_status-bar.scss
+++ b/app/assets/stylesheets/katalyst/content/editor/_status-bar.scss
@@ -6,18 +6,20 @@
   color: var(--color);
   border: 1px solid var(--border);
   margin-bottom: 1rem;
+  white-space: nowrap;
 
   display: grid;
   grid-template-columns: 1fr auto;
   grid-template-areas: "status actions";
   align-items: baseline;
-  grid-column-gap: 2rem;
 
   .status-text {
     display: none;
     grid-area: status;
     font-weight: bold;
     color: var(--color);
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &[data-state="published"] .status-text[data-published],
